--- a/_config.yml
+++ b/_config.yml
@@ -61,3 +61,9 @@ prose:
               field:
                   element: "text"
                   label: "title"
+            - name: "feature"
+              field:
+                  element: "text"
+                  label: "Showcase bild"
+                  help: "Detta är bilden som används som showcase"
+                  type: "text"
