--- a/_config.yml
+++ b/_config.yml
@@ -71,3 +71,11 @@ prose:
                   element: 'checkbox'
                   label: 'Publicerad'
                   value: 'true'
+            - name: 'date'
+              field:
+                  element: 'hidden'
+                  value: CURRENT_DATETIME
+            - name: 'layout'
+              field:
+                  element: 'hidden'
+                  value: "post"
