--- a/_config.yml
+++ b/_config.yml
@@ -54,7 +54,7 @@ prose:
     rooturl: "_posts"
     siteurl: "http://thomsefors.se"
     relativeLinks: "http://thomsefors.se/links.jsonp"
-    media: 'assets/images/posts'
+    media: '/assets/images/posts/'
     metadata:
         _posts:
             - name: "title"
