--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,8 @@ locale:              sv_SE # eg. en_us
 name:				 Thomas Fors
 title:               Thomas Fors
 tagline:             'tagline'
-description:         'description'
-url:                 site url
+description:         'This is the personal blog of Thomas Fors. An photo artist living and operating in Gothenburg, Sweden'
+url:                 'http://thomasfors.se'
 rss:                 rss feed url
 baseurl_posts_img:   '/assets/images/posts/'
 baseurl_featured_img: '/assets/images/hero/'
